--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -1,6 +1,6 @@
 .headerContainer {
   height: 5rem;
-  border-bottom: 1px solid var(--gray-800);
+  border-bottom: 1px solid var(--gray-700);
 }
 
 .headerContent {
@@ -50,5 +50,9 @@
         background-color: var(--yellow-500);
       }
     }
+  }
+  
+  button {
+    margin-left: auto;
   }
 }
